syntax = "proto3";

package port;

option go_package = "contract/gogrpc/port";

message PortAssignResponse {
    repeated string  ports = 1;
}

message PortAssignRequest {

    repeated string portsUsed = 1;
    uint32 requestNumberOfPort = 2;
}

message OpenPortsRequest {
    repeated string ports = 1;
}

message OpenPortsResponse {
    repeated string ports = 1;
}


service Port {
    rpc GetAvailablePorts(PortAssignRequest) returns (PortAssignResponse);
    rpc OpenPorts(OpenPortsRequest) returns (OpenPortsResponse);
}